environments/gloo-edge/argo-rollouts/echo/echo-rollout/strategies/canary-vs/base/echo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-stable
  namespace: echo
  labels:
    app: echo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: echo
---
apiVersion: v1
kind: Service
metadata:
  name: echo-canary
  namespace: echo
  labels:
    app: echo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: echo
